--- a/otherFunctions.kv
+++ b/otherFunctions.kv
@@ -19,17 +19,24 @@
         pos: self.width / 25, self.height /13
         text: "Система <Столовая> автоматизирует\nвзаимодействие сотрудников с компанией\nпредоставляющей услуги корпоративного\nпитания. "
     Button:
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 6, root.height / 6
+                pos: (root.width / 10, 0)
+                radius: [15]
         size_hint_x: None
         size_hint_y: None
         font_name: "RubikMonoOne-Regular"
         text: "Обратно\nв меню"
-        font_size: 16
+        font_size: root.width / 35
         background_color: (1, 1, 1, 0)
-        size: root.width / 8, root.height / 6
+        pos: root.width * 0.1, 0
+        size: root.width / 6, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
             root.manager.current = 'Menu'
-
 
 <OtherSystemsApp>
     canvas:
@@ -38,13 +45,21 @@
             pos: self.pos
             size: self.size
     Button:
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 6, root.height / 6
+                pos: (root.width / 10, 0)
+                radius: [15]
         size_hint_x: None
         size_hint_y: None
         font_name: "RubikMonoOne-Regular"
         text: "Обратно\nв меню"
-        font_size: 16
+        font_size: root.width / 35
         background_color: (1, 1, 1, 0)
-        size: root.width / 8, root.height / 6
+        pos: root.width * 0.1, 0
+        size: root.width / 6, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
             root.manager.current = 'Menu'
@@ -124,17 +139,24 @@
             pos: root.width / 1.7, root.height/5
             background_color: (1, 1, 1, 0)
     Button:
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 6, root.height / 6
+                pos: (root.width / 10, 0)
+                radius: [15]
         size_hint_x: None
         size_hint_y: None
         font_name: "RubikMonoOne-Regular"
         text: "Обратно\nв меню"
-        font_size: 16
+        font_size: root.width / 35
         background_color: (1, 1, 1, 0)
-        size: root.width / 8, root.height / 6
+        pos: root.width * 0.1, 0
+        size: root.width / 6, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
             root.manager.current = 'Menu'
-
 <DepositApp>
     deposit: deposit
     canvas:
@@ -164,13 +186,21 @@
             background_color: (1, 1, 1, 0)
             on_press: root.confirm_deposit()
     Button:
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 6, root.height / 6
+                pos: (root.width / 10, 0)
+                radius: [15]
         size_hint_x: None
         size_hint_y: None
         font_name: "RubikMonoOne-Regular"
         text: "Обратно\nв меню"
-        font_size: 16
+        font_size: root.width / 35
         background_color: (1, 1, 1, 0)
-        size: root.width / 8, root.height / 6
+        pos: root.width * 0.1, 0
+        size: root.width / 6, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
             root.manager.current = 'Menu'
