--- a/food_menu.kv
+++ b/food_menu.kv
@@ -67,13 +67,21 @@
 
 
     Button:
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 6, root.height / 6
+                pos: (root.width / 10, 0)
+                radius: [15]
         size_hint_x: None
         size_hint_y: None
         font_name: "RubikMonoOne-Regular"
         text: "Обратно\nв меню"
-        font_size: 16
+        font_size: root.width / 35
         background_color: (1, 1, 1, 0)
-        size: root.width / 8, root.height / 6
+        pos: root.width * 0.1, 0
+        size: root.width / 6, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
             root.manager.current = 'Menu'
@@ -94,16 +102,38 @@
         font_name: "RubikMonoOne-Regular"
         background_color: (0, 0, 0, 0)
         font_size: root.width / 40
-        on_press:
+        on_release: root.add_to_order()
+
+    Button:
+        canvas.before:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 20
+                pos: root.width / 1.5, root.height / 10
+                radius: [15]
+        text: "К корзине"
+        size_hint: (None, None)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 1.5, root.height / 10)
+        font_name: "RubikMonoOne-Regular"
+        background_color: (0, 0, 0, 0)
+        font_size: root.width / 40
+        on_release:
             root.manager.transition = NoTransition()
-            root.manager.current = 'Menu'
+            root.manager.current = 'FoodCart'
+
 
 <FoodCartApp>
+    total_summ: total_summ
+    total_order: total_order
     amount_hint: amount_hint
     price_hint: price_hint
     total_hint: total_hint
+    dish_del_counter: dish_del_counter
     food_exclude_button: food_exclude_button
     food_exclusion_image: food_exclusion_image
+    cart_delete: cart_delete
     canvas:
         Rectangle:
             source: "Images/backgrounds/background5.jpg"
@@ -131,6 +161,29 @@
         size_hint: (None, None)
         size: (root.width / 4, root.height / 4)
         pos: (root.width * 0.74, root.height / 1.3)
+    Label:
+        size_hint: (None, None)
+        font_size: root.width / 30
+        text: "К оплате: "
+        font_name: "RubikMonoOne-Regular"
+        size: (root.width / 4, root.height / 4)
+        pos: (root.width * 0.1, root.height / 1.2)
+    Label:
+        id: total_summ
+        size_hint: (None, None)
+        font_size: root.width / 30
+        text: "assddw"
+        font_name: "RubikMonoOne-Regular"
+        size: (root.width / 4, root.height / 4)
+        pos: (root.width * 0.1, root.height / 6)
+    Label:
+        id: total_order
+        size_hint: (None, None)
+        font_size: root.width / 45
+        text: ""
+        font_name: "RubikMonoOne-Regular"
+        size: (root.width / 4, root.height / 3)
+        pos: (root.width * 0.15, root.height / 1.5)
     Label:
         size_hint: (None, None)
         font_size: root.width / 30
@@ -183,3 +236,50 @@
         size: (root.width / 4, root.height / 4)
         pos: (root.width * 0.7, root.height / 3.3)
         text: ""
+
+    TextInput:
+        id: dish_del_counter
+        size_hint: (None, None)
+        hint_text: "Введите кол-во"
+        font_size: root.width / 55
+        font_name: "RubikMonoOne-Regular"
+        size: (root.width / 4, root.height / 20)
+        pos: (root.width * 0.75, root.height / 3.4)
+        text: ""
+    Button:
+        id: cart_delete
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 4, root.height / 20
+                pos: root.width / 1.4, root.height / 10
+                radius: [15]
+        text: "Подтвердить"
+        size_hint: (None, None)
+        size: root.width / 4, root.height / 20
+        pos: (root.width / 1.4, root.height / 10)
+        font_name: "RubikMonoOne-Regular"
+        background_color: (0, 0, 0, 0)
+        font_size: root.width / 35
+        on_release:
+            root.deleting_dishes()
+    Button:
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
+                size: root.width / 6, root.height / 6
+                pos: (root.width / 10, 0)
+                radius: [15]
+        size_hint_x: None
+        size_hint_y: None
+        font_name: "RubikMonoOne-Regular"
+        text: "Обратно\nв меню"
+        font_size: root.width / 35
+        background_color: (1, 1, 1, 0)
+        pos: root.width * 0.1, 0
+        size: root.width / 6, root.height / 6
+        on_press:
+            root.manager.transition = NoTransition()
+            root.manager.current = 'Menu'
