--- a/adminLogin.kv
+++ b/adminLogin.kv
@@ -41,6 +41,7 @@
                 id: password_input
                 background_color: (1, 1, 1, 0.35)
                 hint_text: 'Пароль'
+                password: True
         GridLayout:
             size: 200, 200
             rows: 2
