--- a/otherFunctions.kv
+++ b/otherFunctions.kv
@@ -134,6 +134,26 @@
         on_press:
             root.manager.transition = NoTransition()
             root.manager.current = 'Menu'
+<NewAndHitsApp>
+
+    canvas:
+        Rectangle:
+            source: 'Images/backgrounds/background5.jpg'
+            pos: self.pos
+            size: self.size
+    Button:
+        size_hint_x: None
+        size_hint_y: None
+        font_name: "RubikMonoOne-Regular"
+        text: "Обратно\nв меню"
+        font_size: 16
+        background_color: (1, 1, 1, 0)
+        size: root.width / 8, root.height / 6
+        on_press:
+            root.manager.transition = NoTransition()
+            root.manager.current = 'Menu'
+
+
 
 <DepositApp>
     deposit: deposit
