--- a/Points.kv
+++ b/Points.kv
@@ -35,7 +35,7 @@
             font_name: "Finlandica-Regular"
             on_press:
                 root.manager.transition = NoTransition()
-                if root.check_not_occupied(): root.manager.current = 'food_menu'
+                if root.check_not_occupied1(): root.manager.current = 'FoodMenu'
 
         Button:
             id: table2
@@ -50,7 +50,7 @@
             font_name: "Finlandica-Regular"
             on_press:
                 root.manager.transition = NoTransition()
-                if root.check_not_occupied(): root.manager.current = 'food_menu'
+                if root.check_not_occupied2(): root.manager.current = 'FoodMenu'
 
         Button:
             id: table3
@@ -64,7 +64,7 @@
             font_name: "Finlandica-Regular"
             on_press:
                 root.manager.transition = NoTransition()
-                if root.check_not_occupied(): root.manager.current = 'food_menu'
+                if root.check_not_occupied3(): root.manager.current = 'FoodMenu'
         Button:
             id: table4
 
@@ -79,4 +79,4 @@
             font_name: "Finlandica-Regular"
             on_press:
                 root.manager.transition = NoTransition()
-                if root.check_not_occupied(): root.manager.current = 'food_menu'
+                if root.check_not_occupied4(): root.manager.current = 'FoodMenu'
