--- a/food_menu.kv
+++ b/food_menu.kv
@@ -130,6 +130,7 @@
     amount_hint: amount_hint
     price_hint: price_hint
     total_hint: total_hint
+    balance_hint: balance_hint
     dish_del_counter: dish_del_counter
     food_exclude_button: food_exclude_button
     food_exclusion_image: food_exclusion_image
@@ -172,10 +173,10 @@
         id: total_summ
         size_hint: (None, None)
         font_size: root.width / 30
-        text: "assddw"
+        text: ""
         font_name: "RubikMonoOne-Regular"
         size: (root.width / 4, root.height / 4)
-        pos: (root.width * 0.1, root.height / 6)
+        pos: (root.width * 0.1, root.height / 5)
     Label:
         id: total_order
         size_hint: (None, None)
@@ -269,8 +270,36 @@
             Color:
                 rgba: (1, 1, 1, 0.2)
             RoundedRectangle:
+                size: root.width / 5, root.height / 10
+                pos: (root.width / 20, root.height / 5.7)
+                radius: [15]
+        size_hint_x: None
+        size_hint_y: None
+        font_name: "RubikMonoOne-Regular"
+        text: "Заказать"
+        font_size: root.width / 35
+        background_color: (1, 1, 1, 0)
+        pos: (root.width / 20, root.height / 5.7)
+        size: root.width / 5, root.height / 10
+        on_press:
+            root.dishes_ordering()
+    Label:
+        id: balance_hint
+        size_hint_x: None
+        size_hint_y: None
+        font_name: "RubikMonoOne-Regular"
+        text: ""
+        font_size: root.width / 40
+        background_color: (1, 1, 1, 0)
+        pos: (root.width / 3, root.height / 5.7)
+        size: root.width / 5, root.height / 10
+    Button:
+        canvas:
+            Color:
+                rgba: (1, 1, 1, 0.2)
+            RoundedRectangle:
                 size: root.width / 6, root.height / 6
-                pos: (root.width / 10, 0)
+                pos: (root.width / 20, 0)
                 radius: [15]
         size_hint_x: None
         size_hint_y: None
@@ -278,7 +307,7 @@
         text: "Обратно\nв меню"
         font_size: root.width / 35
         background_color: (1, 1, 1, 0)
-        pos: root.width * 0.1, 0
+        pos: root.width / 20, 0
         size: root.width / 6, root.height / 6
         on_press:
             root.manager.transition = NoTransition()
